--- a/package.json
+++ b/package.json
@@ -18,18 +18,17 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^1.0.0"
+    "@nuxtjs/axios": "^5.1.1",
+    "nuxt": "^1.4.0",
+    "nuxt-property-decorator": "^1.0.0",
+    "vuex-class": "^0.3.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.1",
-    "eslint": "^4.15.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "@types/node": "^9.4.7",
+    "ts-loader": "^4.1.0",
+    "typescript": "^2.7.2"
   }
 }
