--- a/config/development.env
+++ b/config/development.env
@@ -1,4 +1,5 @@
 HOST=localhost
 PORT=3000
-SERVER=http://localhost:3003/api
-SHOP_DOMAIN=krafteam.com
+# SERVER=http://localhost:3003/api
+SERVER=http://46.36.218.53:3003/api
+SHOP_HOST=krafteam.com
