--- a/config/test.env
+++ b/config/test.env
@@ -1,4 +1,4 @@
-HOST=localhost
-PORT=3003
-SERVER=http://localhost:3003/api
+HOST=krafteam.com
+PORT=
+SERVER=http://46.36.218.53:3003/api
 SHOP_HOST=krafteam.com
