--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "postprod": "rimraf ./dist/css/scripts",
     "predev": "gulp --env=development",
     "dev": "cross-env NODE_ENV=development nuxt build",
-    "start":
-      "concurrently \"gulp watcher --env=development\" \"cross-env NODE_ENV=development node server/server.js\" --names \"🥛,📦\" --prefix name --kill-others",
+    "start": "concurrently \"gulp watcher --env=development\" \"cross-env NODE_ENV=development node server/server.js\" --names \"🥛,📦\" --prefix name --kill-others",
     "start:nuxt": "concurrently \"gulp watcher --env=development\" \"cross-env NODE_ENV=development nuxt\" --names \"🥛,📦\" --prefix name --kill-others"
   },
   "dependencies": {
@@ -38,6 +37,7 @@
     "nuxt": "1.4.0",
     "nuxt-class-component": "1.2.0",
     "nuxt-cli": "0.0.1",
+    "query-string": "^6.0.0",
     "vue": "2.5.16",
     "vue-class-component": "6.2.0",
     "vuex-class": "0.3.0"
