--- a/config/development.env
+++ b/config/development.env
@@ -3,3 +3,6 @@ PORT=3000
 # SERVER=http://localhost:3003/api
 SERVER=http://46.36.218.53:3003/api
 SHOP_HOST=krafteam.com
+
+# 1 hour
+CACHE_DURATION=3600000
