--- a/config/test.env
+++ b/config/test.env
@@ -1,4 +1,7 @@
 HOST=krafteam.com
-PORT=
+PORT=5050
 SERVER=http://46.36.218.53:3003/api
 SHOP_HOST=krafteam.com
+
+# 15 days
+CACHE_DURATION=1296000000
