--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "postprod": "rimraf ./dist/css/scripts",
     "predev": "gulp --env=development",
     "dev": "cross-env NODE_ENV=development nuxt build",
-    "start": "concurrently \"gulp watcher --env=development\" \"cross-env NODE_ENV=development node server/server.js\" --names \"🥛,📦\" --prefix name --kill-others",
-    "start:nuxt": "concurrently \"gulp watcher --env=development\" \"cross-env NODE_ENV=development nuxt\" --names \"🥛,📦\" --prefix name --kill-others"
+    "start":
+      "concurrently \"gulp watcher --env=development\" \"cross-env NODE_ENV=development node server/server.js\" --names \"🥛,📦\" --prefix name --kill-others",
+    "start:nuxt": "concurrently \"gulp watcher --env=development\" \"cross-env NODE_ENV=development nuxt\" --names \"🥛,📦\" --prefix name --kill-others",
+    "cache": "node server/cache/heat_generate.js"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.1.1",
@@ -33,6 +35,7 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "4.16.3",
+    "lru-cache": "^4.1.2",
     "normalize-scss": "^7.0.1",
     "nuxt": "1.4.0",
     "nuxt-class-component": "1.2.0",
