Finish catalig_UI

--- a/config/development.env
+++ b/config/development.env
@@ -1,7 +1,7 @@
 HOST=localhost
 PORT=3000
-# SERVER=http://localhost:3003/api
-SERVER=http://46.36.218.53:3003/api
+# SERVER=http://localhost:3003
+SERVER=http://46.36.218.53:3003
 SHOP_HOST=krafteam.com
 
 # 1 hour
