--- a/config/test.env
+++ b/config/test.env
@@ -1,6 +1,6 @@
 HOST=krafteam.com
 PORT=5050
-SERVER=http://46.36.218.53:3003/api
+SERVER=http://46.36.218.53:3003
 SHOP_HOST=krafteam.com
 
 # 15 days
