--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dev": "cross-env NODE_ENV=development nuxt build",
     "start": "concurrently \"gulp watcher --env=development\" \"cross-env NODE_ENV=development node server/server.js\" --names \"🥛,📦\" --prefix name --kill-others",
     "start:nuxt": "concurrently \"gulp watcher --env=development\" \"cross-env NODE_ENV=development nuxt\" --names \"🥛,📦\" --prefix name --kill-others",
-    "cache": "node server/cache/heat_generate.js"
+    "cache": "node server/cache/heat_generate.js",
+    "start:prod": "cross-env NODE_ENV=production node server/server.js"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.1.1",
