--- a/config/development.env
+++ b/config/development.env
@@ -3,7 +3,7 @@ HOST=localhost
 PORT=3000
 # SERVER=http://localhost:3003
 SERVER=http://46.36.218.53:3003
-SHOP_HOST=krafteam.com
+SHOP_HOST=craft.ru
 
 # 1 hour
 CACHE_DURATION=3600000
