--- a/config/production.env
+++ b/config/production.env
@@ -2,7 +2,7 @@ NODE_ENV=production
 HOST=localhost
 PORT=5050
 SERVER=http://46.36.218.53:3003
-SHOP_HOST=krafteam.com
+SHOP_HOST=craft.ru
 
 # 15 days
 CACHE_DURATION=1296000000
