--- a/config/test.env
+++ b/config/test.env
@@ -1,8 +1,8 @@
 NODE_ENV=test
-HOST=krafteam.com
+HOST=localhost
 PORT=5050
 SERVER=http://46.36.218.53:3003
-SHOP_HOST=krafteam.com
+SHOP_HOST=craft.ru
 
 # 15 days
 CACHE_DURATION=1296000000
