Finish split_host_to_client

--- a/config/development.env
+++ b/config/development.env
@@ -1,6 +1,7 @@
 NODE_ENV=development
 HOST=localhost
 PORT=3000
+CLIENT_HOST=http://localhost:3000
 # SERVER=http://localhost:3003
 SERVER=http://46.36.218.53:3003
 SHOP_HOST=craft.ru
